# alinix

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  HeisenOs.cue  LICENSE  Makefile  Makefile.am  README.md  README.riscv.md  SECURITY.md  dialog.sh  grub.cfg  kernel.asm  run_qemu.sh
.github/: FUNDING.yml
.github/workflows/: elf-gcc.yml  kerne.yml  test.yml  tests.yml
Docs/: generic_header.md
Documentation/: generic_header.md
Documentation/Network/: 6lowpan.rst  6pack.rst  bonding.rst  bridge.rst  dccp.rst  dctcp.rst  dns_resolver.rst  driver.rst  eql.rst  failover.rst  gen_stats.md  general.md  gtp.md  ila.rst  j1939.rst  napi.rst  net_dim.rst  netdevices.rst  netif-msg.rst  nf_flowtable.rst  snmp_counter.rst  sriov.rst  sysfs-tagging.rst  tc-actions-env-rules.rst  tc-queue-filters.rst  tcp-thin.rst  tcp_ao.rst  vrf.rst  xdp-rx-metadata.rst  xfrm_sync.rst  xsk-tx-metadata.rst
Documentation/PCI/: acpi-info.rst  boot-interrupts.rst  msi-howto.rst  pci-error-recovery.rst  pci-iov-howto.rst  pci.rst  pcieaer-howto.rst  pciebus-howto.rst
Documentation/drivers/: keyboard.md
Documentation/history/: CHANGELOG.md
Documentation/kernel/: bootloader.md  compile.md  inspire.md  kernel.md
Documentation/licenses/: LICENSE
Documentation/obsolete/: README.md
apps/: Makefile
apps/browser/: main.cc  main.cpp
apps/calc/: calc.cc  calc.cpp
apps/chess/: attack.h  board.h  book.h  chess.cpp  colour.h  eval.cpp  eval.h  fen.cpp  fen.h  hash.hpp  list.cpp  list.hpp  material.h  move.h  move_check.h  move_do.h  move_legal.h  option.cpp  option.hpp  pawn.h  piece.cpp  piece.h  posix.cpp  posix.h  protocol.h  pts.h  pv.cpp  pv.h  recog.h  search.h  see.h  square.cpp  square.h  util.h  value.h  vector.cpp  vector.h
apps/clock/: clock.cc  clock.cpp
apps/compositor/: compositor.cc  compositor.cpp  compositor.h  compositor.hpp  contextmanager.cc  contextmanager.cpp  contextmanager.h  contextmanager.hpp  cursor.h  cursor.hpp  debugger.cc  debugger.cpp  debugger.h  debugger.hpp  main.cc  main.cpp  scancodes.cc  scancodes.cpp
apps/desktop/: desktop.cc  item.h  item.hpp
apps/editor/: editor.c  editor.h
apps/init/: init.cc  init.cpp  progress.h
apps/mines/: mines.cc  mines.cpp
apps/powermanager/: main.cc
apps/settings/: handlers.h  settings.cpp
apps/sysinfo/: sysinfo.cc
apps/terminal/: terminal.cc  terminalcontrol.cc  terminalcontrol.cpp  terminalcontrol.h
apps/welcome/: welcome.cpp  welcome.h
arch/x86/: cmos.c  gdt.c  idt.s  ivt.c  pic.c  pit.c  ports.c  ps2.c  start.s  vga.c
bootloader/: init.asm
drivers/: Makefile  fdc.c  keyboard.c
drivers/connector/: cn_proc.c
drivers/fpga/: Makefile  altera-freeze-bridge.c  altera-hps2fpga.c  altera-pr-ip-core-plat.c  dfl-afu-dma-region.c  dfl-afu-error.c  dfl-afu.h  dfl-fme-br.c  dfl-fme-error.c  dfl-fme-main.c  dfl-fme-perf.c  dfl-pci.c  dfl.c  dfl.h  fpga-bridge.c  ice40-spi.c  intel-m10-bmc-sec-update.c  io-pgtable.h  lattice-sysconfig.c  lattice-sysconfig.h  of-fpga-region.c  socfpga-a10.c  socfpga.c  stratix10-soc.c  xilinx-pr-decoupler.c  zynq-fpga.c  zynqmp-fpga.c
drivers/fsi/: Kconfig  cf-fsi-fw.h  fsi-core.c  fsi-master-ast-cf.c  fsi-master-gpio.c  fsi-master-i2cr.h  fsi-scom.c  i2cr-scom.c
drivers/include/: core.h
drivers/mcb/: Kconfig  mcb-core.c  mcb-pci.c
drivers/powercap/: Kconfig  dtpm_cpu.c  idle_inject.c  intel_rapl_msr.c  powercap_sys.c
drivers/usb3/: Makefile  core.c  (+7 more)
driverso/: Makefile
fs/: fcntl.c
generic/: log.c
hardware/: pic8259.c
include/: 8259_pic.h  multiboot.h  panic.h  stdio.h  syscall.h  types.h  version.h  vm.h
io/: serialport.c
ipc/: Makefile  syscall.c
iso/: .gitignore  debug.sym
isofiles/: debug.sym
kernel/: Makefile  bitmanip.h  gdt.c  hashmap.h  kernel.c  linker.ld  main.c  stdlib.c  string.c  ulib.c
kernelx/: Makefile  grub.cfg  hashmap.h
kernelz/: Makefile  linker.ld
libcx/: makefile
patch/: 0001-Ci-CD-changed.patch  0001-Patch-for-the-kernel.patch  0001-Patch.patch  0002-Ci-CD-changed.patch  0002-Minor-update.patch  0003-Minor-update.patch  0004-Minor-update.patch  0004-Minor.patch  0005-File-changes-fot-the-graphical-interface-of-the-kern.patch  0005-Minor.patch  0006-File-changes-fot-the-graphical-interface-of-the-kern.patch  0006-Minor-update.patch  0007-Minor-update.patch  0007-Minor-updates.patch  0008-Minor-update.patch  0008-Minor-updates.patch  0009-Minor-update.patch  0009-Updated-the-kernel-main.patch  0010-Minor-update.patch  0010-Updated-the-kernel-main.patch  0011-Minor-patch.patch  0011-Minor-update.patch  0012-Minor-patch.patch  0012-Update-for-the-kernel-GUI.patch  0013-Minor-update.patch  0013-Update-for-the-kernel-GUI.patch  0014-Minor-update.patch  0014-Patch.patch  0015-Patch.patch  0015-Updated-the-patch.patch  0016-Minor-update.patch  0016-Updated-the-patch.patch  0017-Minor-update.patch  0017-Patch.patch  0018-Patch.patch  0019-Minor-update.patch  0019-Patch.patch  0020-Patch-minor.patch  0021-Minor-update.patch  0021-Patch-for-the-video-of-the-kernel.patch  (+495 more)
scripts/: dialog.c
security/: Makefile  security.mk
signals/: pic.c
src/: fat32.c  kernel.c  kernel.ids  keyboard.c  mouse.c  rme_internal.h  serial.c
sys/: dirent.c
tools/: advanceddebugger.py
(+1479 files in other folders)
